<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.mobilenumber.MobileNumberFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.053" />

        <TextView
            android:id="@+id/tv_enter_otp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number"
            app:layout_constraintVertical_bias="0.027" />

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_border"
            android:hint="@string/enter_otp_hint"
            android:inputType="number"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:paddingBottom="@dimen/padding_8dp"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_otp_title"
            app:layout_constraintVertical_bias="0.034"
            app:layout_constraintWidth_percent=".3" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="et_otp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/btn_continue_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_phone_number"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/tv_count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/counter_initial_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/barrier_phone_number"
            app:layout_constraintVertical_bias="0.015" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/edit_icon_size"
            android:layout_height="@dimen/edit_icon_size"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toTopOf="@+id/tv_enter_otp_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toEndOf="@+id/tv_mobile_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.644" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/network_error"
        layout="@layout/network_error"/>

</FrameLayout>