<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.discovery.DiscoveryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/discovery_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent=".7"
            app:layout_constraintHeight_percent=".35"
            android:layout_marginStart="@dimen/text_size_large"
            android:layout_marginTop="@dimen/padding_16dp"
            android:layout_marginEnd="@dimen/text_size_large"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="@dimen/image_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/photo_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_16dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/user_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.058"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.948" />

                <TextView
                    android:id="@+id/user_age"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_name"
                    app:layout_constraintVertical_bias="0.65" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView5"
            style="@style/Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_title_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/textView6"
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/personal_message_to_you_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="card_view" />

        <TextView
            android:id="@+id/textView8"
            style="@style/Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/interested_in_you_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/premium_member_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@drawable/button_background"
            android:text="@string/btn_upgrade_text"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.652"
            app:layout_constraintStart_toStartOf="@id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textView8,textView9"
            app:layout_constraintTop_toTopOf="@id/barrier1" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="textView9,textView8,button2" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".32"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier3">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_weight=".5"
                app:cardBackgroundColor="#fcfcfc"
                app:cardCornerRadius="@dimen/padding_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/user_avatar1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/photo_2" />

                <TextView
                    android:id="@+id/user_name2"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_weight=".5"
                app:cardBackgroundColor="#fcfcfc"
                app:cardCornerRadius="@dimen/image_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/user_avatar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/photo_3" />

                <TextView
                    android:id="@+id/user_name3"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/transparent_loading_bar" />

    <include
        android:id="@+id/network_error"
        layout="@layout/network_error" />

</LinearLayout>


